--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,1 +1,104 @@
+$bg-light: #FBC84D;
+$bg-dark:  #416384;
+$bggs-light: #cfcfcf;
+$bggs-dark:  #5e5e5e;
 
+*{
+	outline: none !important;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	flex-wrap: wrap;
+}
+html{
+	width: 100%;
+	min-width: 320px;
+	font-size: 12px;
+	line-height: 1.4;	
+	overflow-x: hidden;	
+}
+body {
+	font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+	position: relative;
+	overflow-x: hidden;
+	width: 100%;
+	min-width: 320px;	
+	text-align: center;
+}
+button {
+  border: 0;
+}
+.light{
+	background-color: #fff;
+	padding: 30px 15px;
+}
+.dark{
+	background-color: $bg-dark;
+	padding: 30px 15px;
+}
+.btn{
+	display: inline-block;
+	cursor: pointer;
+	text-decoration: none;
+	border-radius: 5px;
+	border: none;
+	text-align: center;
+	line-height: 2;
+	transition: .2;
+	&_dark{
+		color: #fff;
+    background: linear-gradient(to top, $bg-dark, lighten($bg-dark, 10%), $bg-dark);
+		&[disabled]{
+      background: linear-gradient(to top, $bggs-dark, lighten($bggs-dark, 10%), $bggs-dark);
+		}
+		&:not([disabled]):hover{
+			box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.75);
+		}
+		&:not([disabled]):active{
+      background: linear-gradient(to top, $bg-dark, darken($bg-dark, 10%), $bg-dark);
+		}
+	}
+	&_light{
+		color: darken($bg-dark, 10%);
+    background: linear-gradient(to top, $bg-light, lighten($bg-light, 10%), $bg-light);
+		&[disabled]{
+			color: darken($bggs-dark, 10%);
+      background: linear-gradient(to top, $bggs-light, lighten($bggs-light, 10%), $bggs-light);
+		}
+		&:not([disabled]):hover{
+			box-shadow:         0px 0px 5px 0px rgba(250, 250, 250, 0.75);
+		}
+		&:not([disabled]):active{
+      background: linear-gradient(to top, $bg-light, darken($bg-light, 10%), $bg-light);
+		}
+	}
+	&_small{
+		font-size: 12px;
+		padding: 0 10px;
+	}
+	&_normal{
+		font-size: 16px;
+		padding: 0 15px;
+	}
+	&_medium{
+		font-size: 20px;
+		padding: 0 20px;
+	}
+	&_large{
+		font-size: 24px;
+		padding: 0 25px;
+	}
+}
+.mrgn{
+	margin: 1%;
+}
+.development{
+	display: inline-block;
+	padding: 15px;
+	color: #333333;
+	text-decoration: none; 
+	&:hover{
+		text-decoration: underline; 
+	}
+}
