--- a/scss/main.scss
+++ b/scss/main.scss
@@ -45,7 +45,7 @@ button {
 	border: none;
 	text-align: center;
 	line-height: 2;
-	transition: .2;
+	transition: .2s;
 	&_dark{
 		color: #fff;
     background: linear-gradient(to top, $bg-dark, lighten($bg-dark, 10%), $bg-dark);
