--- a/scss/main.scss
+++ b/scss/main.scss
@@ -77,6 +77,7 @@ button {
       background: linear-gradient(to top, $bg-light, darken($bg-light, 10%), $bg-light);
 		}
 		&.disable{
+			color: darken($bggs-dark, 10%);
       background: linear-gradient(to top, $bggs-light, lighten($bggs-light, 10%), $bggs-light) !important;
 			box-shadow: none !important;
 		}
